--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
 <main>
     <header>
-        <mat-toolbar>
+        <mat-toolbar color="primary">
             <span>My Application</span>
         </mat-toolbar>          
     </header>
+    <section>
+        <router-outlet></router-outlet>
+    </section>
 </main>
