--- a/src/app/cursos/curso/curso.component.html
+++ b/src/app/cursos/curso/curso.component.html
@@ -1,23 +1,28 @@
-<p>curso works!</p>
-<table mat-table [dataSource]="cursos" class="mat-elevation-z8">
+<mat-card appearance="outlined">
+  <mat-toolbar>
+    <span>Lista Alunos</span>
+  </mat-toolbar>
+  <div *ngIf="cursos$ | async as cursos; else loading">
+    <table mat-table [dataSource]="cursos" class="mat-elevation-z8">
+      <!-- Nome Column -->
+      <ng-container matColumnDef="nome">
+        <th mat-header-cell *matHeaderCellDef> Nome </th>
+        <td mat-cell *matCellDef="let element"> {{ element.nome }} </td>
+      </ng-container>
+  
+      <!-- Curso Column -->
+      <ng-container matColumnDef="curso">
+        <th mat-header-cell *matHeaderCellDef> Curso </th>
+        <td mat-cell *matCellDef="let element"> {{ element.curso }} </td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </div>
+  <ng-template #loading>
+    <mat-spinner></mat-spinner>
+  </ng-template>
+</mat-card>
 
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
-  
-    <!-- Position Column -->
-    <ng-container matColumnDef="nome">
-      <th mat-header-cell *matHeaderCellDef> Nome </th>
-      <td mat-cell *matCellDef="let element"> {{ element.nome }} </td>
-    </ng-container>
-  
-    <!-- Name Column -->
-    <ng-container matColumnDef="curso">
-      <th mat-header-cell *matHeaderCellDef> Curso </th>
-      <td mat-cell *matCellDef="let element"> {{element.categoria}} </td>
-    </ng-container>
-  
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-  
   
